# txmmo

./: .gitignore  CHANGELOG  Cargo.toml  README.md  pyproject.toml
art/: logo.ase
docs/: README.md  _coverpage.md  _sidebar.md  index.html
notes/: everything.md  everything.pu  high-level.md  high-level.pu  ideas.md  todo.md
scripts/: macos_dev.sh  macos_test.sh
src/: lib.rs
txmmo/: __main__.py
txmmo/client/: __init__.py  app.py  managers.py  state.py
txmmo/server/: __init__.py
