[package]
name = "mmocore"
version = "0.1.0"
authors = ["k01e <k01e.alm07@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "mmocore"
crate-type = ["cdylib"]

[package.metadata.maturin]
name = "txmmo.mmocore"

[dependencies]
pyo3 = "0.18.1"
