[project]
name = "txmmo"
version = "0.1.0"
description = "A cli factory building mmo."
readme = "README.md"
authors = [{name="k01e", email="<k01e.alm07@gmail.com>"}]
requires-python = ">=3.9"

dependencies = [
    "textual==0.15.1",
    "websockets==10.4"
]

[build-system]
requires = ["maturin>=0.14,<0.15"]
build-backend = "maturin"

[project.scripts]
txmmo = "txmmo.__main__:main"

[tool.maturin]
features = ["pyo3/extension-module"]
